@@ -1108,6 +1108,9 @@ void M_LoadDefaults (void);
 
 void M_SaveDefaults (void);
 
+void M_LoadExtendedDefaults(void); // FS: For EXTEND.CFG
+void M_SaveExtendedDefaults(void); // FS: For EXTEND.CFG
+
 int M_DrawText (int x, int y, boolean direct, char *string);
 
 //----------------------
