@@ -1,0 +1,201 @@
+// FS: Internal HT_GUS1M.WAD
+
+char *htgus =
+{
+	// #
+	// # 1024K patch mapping optimized for Heretic!  (well, the beta anyways)
+	// # by Tom Klok <tomtom@mindlink.bc.ca> on Dec 21, 1994
+	// #
+	// # patch#, 256K, 512K, 768K, 1024K, filename
+	// #
+	"0,2,1,1,0,acpiano\n"\
+	"1,2,1,1,1,britepno\n"\
+	"2,2,1,1,1,synpiano\n"\
+	"3,2,1,1,1,honky\n"\
+	"4,2,1,1,1,epiano1\n"\
+	"5,2,1,1,1,epiano2\n"\
+	"6,2,1,1,1,hrpschrd\n"\
+	"7,2,1,1,1,clavinet\n"\
+	"8,12,12,12,12,celeste\n"\
+	"9,12,12,12,12,glocken\n"\
+	"10,12,12,12,12,musicbox\n"\
+	"11,12,12,12,12,vibes\n"\
+	"12,12,12,12,12,marimba\n"\
+	"13,12,12,12,12,xylophon\n"\
+	"14,12,12,12,14,tubebell\n"\
+	"15,12,12,12,14,santur\n"\
+	"16,2,16,16,16,homeorg\n"\
+	"17,2,16,16,16,percorg\n"\
+	"18,2,16,16,18,rockorg\n"\
+	"19,2,16,16,19,church\n"\
+	"20,2,16,16,16,reedorg\n"\
+	"21,2,16,16,18,accordn\n"\
+	"22,2,16,16,18,harmonca\n"\
+	"23,2,16,16,18,concrtna\n"\
+	"24,24,24,24,27,nyguitar\n"\
+	"25,24,24,24,27,acguitar\n"\
+	"26,24,24,24,27,jazzgtr\n"\
+	"27,24,24,24,27,cleangtr\n"\
+	"28,24,24,24,27,mutegtr\n"\
+	"29,29,29,29,30,odguitar\n"\
+	"30,29,30,30,30,distgtr\n"\
+	"31,29,30,30,30,gtrharm\n"\
+	"32,39,32,32,32,acbass\n"\
+	"33,39,32,32,33,fngrbass\n"\
+	"34,39,32,32,33,pickbass\n"\
+	"35,39,32,32,35,fretless\n"\
+	"36,39,36,36,33,slapbas1\n"\
+	"37,39,36,36,33,slapbas2\n"\
+	"38,39,36,36,32,synbass1\n"\
+	"39,39,36,36,32,synbass2\n"\
+	"40,40,40,40,48,violin\n"\
+	"41,40,40,40,48,viola\n"\
+	"42,40,42,42,48,cello\n"\
+	"43,40,40,40,48,contraba\n"\
+	"44,40,40,40,48,tremstr\n"\
+	"45,40,40,40,45,pizzcato\n"\
+	"46,24,24,46,46,harp\n"\
+	"47,47,47,47,47,timpani\n"\
+	"48,51,51,48,48,marcato\n"\
+	"49,51,51,49,48,slowstr\n"\
+	"50,51,51,48,50,synstr1\n"\
+	"51,51,51,48,51,synstr2\n"\
+	"52,52,52,52,52,choir\n"\
+	"53,52,52,52,52,doo\n"\
+	"54,52,52,52,54,voices\n"\
+	"55,128,128,55,128,orchhit\n"\
+	"56,56,56,56,60,trumpet\n"\
+	"57,56,56,56,60,trombone\n"\
+	"58,56,56,56,62,tuba\n"\
+	"59,56,56,56,60,mutetrum\n"\
+	"60,56,56,56,60,frenchrn\n"\
+	"61,56,56,56,128,hitbrass\n"\
+	"62,56,56,56,62,synbras1\n"\
+	"63,56,56,56,62,synbras2\n"\
+	"64,66,66,64,65,sprnosax\n"\
+	"65,66,66,66,65,altosax\n"\
+	"66,66,66,66,65,tenorsax\n"\
+	"67,66,66,66,65,barisax\n"\
+	"68,68,69,69,65,oboe\n"\
+	"69,68,69,69,65,englhorn\n"\
+	"70,68,69,69,65,bassoon\n"\
+	"71,68,69,69,65,clarinet\n"\
+	"72,73,73,73,73,piccolo\n"\
+	"73,73,73,73,73,flute\n"\
+	"74,73,73,73,73,recorder\n"\
+	"75,73,73,73,73,woodflut\n"\
+	"76,73,73,73,73,bottle\n"\
+	"77,73,77,77,73,shakazul\n"\
+	"78,73,73,73,73,whistle\n"\
+	"79,73,73,73,73,ocarina\n"\
+	"80,29,29,29,30,sqrwave\n"\
+	"81,29,29,29,50,sawwave\n"\
+	"82,73,73,29,92,calliope\n"\
+	"83,73,73,29,92,chiflead\n"\
+	"84,29,29,29,92,charang\n"\
+	"85,52,52,29,92,voxlead\n"\
+	"86,52,52,29,92,lead5th\n"\
+	"87,52,52,29,92,basslead\n"\
+	"88,52,52,88,98,fantasia\n"\
+	"89,52,52,29,92,warmpad\n"\
+	"90,52,52,29,92,polysyn\n"\
+	"91,52,52,29,98,ghostie\n"\
+	"92,52,52,29,92,bowglass\n"\
+	"93,52,52,29,92,metalpad\n"\
+	"94,52,52,29,92,halopad\n"\
+	"95,52,52,29,92,sweeper\n"\
+	"96,52,52,96,92,aurora\n"\
+	"97,52,52,52,92,soundtrk\n"\
+	"98,52,52,52,98,crystal\n"\
+	"99,52,52,52,92,atmosphr\n"\
+	"100,52,52,52,98,freshair\n"\
+	"101,52,52,52,98,unicorn\n"\
+	"102,52,102,102,98,echovox\n"\
+	"103,52,102,102,98,startrak\n"\
+	"104,24,102,102,98,sitar\n"\
+	"105,24,105,105,98,banjo\n"\
+	"106,24,105,105,98,shamisen\n"\
+	"107,24,105,105,98,koto\n"\
+	"108,115,115,115,98,kalimba\n"\
+	"109,24,69,105,98,bagpipes\n"\
+	"110,24,42,42,98,fiddle\n"\
+	"111,24,105,105,98,shannai\n"\
+	"112,114,114,112,98,carillon\n"\
+	"113,114,114,112,98,agogo\n"\
+	"114,114,114,114,47,steeldrm\n"\
+	"115,115,115,115,47,woodblk\n"\
+	"116,115,117,117,116,taiko\n"\
+	"117,115,117,117,117,toms\n"\
+	"118,115,117,117,118,syntom\n"\
+	"119,128,128,128,119,revcym\n"\
+	"120,128,128,128,128,fx-fret\n"\
+	"121,128,128,128,128,fx-blow\n"\
+	"122,128,128,128,128,seashore\n"\
+	"123,128,128,128,128,jungle\n"\
+	"124,128,128,128,128,telephon\n"\
+	"125,128,128,128,128,helicptr\n"\
+	"126,128,128,126,128,applause\n"\
+	"127,128,128,128,128,ringwhsl\n"\
+	"128,128,128,128,128,blank\n"\
+	"155,128,128,128,128,highq\n"\
+	"156,128,128,128,128,slap\n"\
+	"157,128,128,128,128,scratch1\n"\
+	"158,128,128,128,128,scratch2\n"\
+	"159,159,159,159,128,sticks\n"\
+	"160,128,128,128,128,sqrclick\n"\
+	"161,128,128,128,128,metclick\n"\
+	"162,128,128,128,128,metbell\n"\
+	"163,163,163,163,163,kick1\n"\
+	"164,164,164,164,164,kick2\n"\
+	"165,165,165,165,166,stickrim\n"\
+	"166,166,166,166,166,snare1\n"\
+	"167,167,167,167,128,claps\n"\
+	"168,168,168,168,166,snare2\n"\
+	"169,171,169,169,169,tomlo2\n"\
+	"170,170,170,170,170,hihatcl\n"\
+	"171,171,171,171,171,tomlo1\n"\
+	"172,172,172,172,174,hihatpd\n"\
+	"173,175,173,173,173,tommid2\n"\
+	"174,174,174,174,174,hihatop\n"\
+	"175,175,175,175,175,tommid1\n"\
+	"176,178,176,176,176,tomhi2\n"\
+	"177,181,177,177,177,cymcrsh1\n"\
+	"178,178,178,178,178,tomhi1\n"\
+	"179,181,177,177,179,cymride1\n"\
+	"180,181,177,177,180,cymchina\n"\
+	"181,181,177,177,181,cymbell\n"\
+	"182,182,182,182,182,tamborin\n"\
+	"183,181,177,177,183,cymsplsh\n"\
+	"184,128,128,128,184,cowbell\n"\
+	"185,181,177,177,185,cymcrsh2\n"\
+	"186,128,128,128,186,vibslap\n"\
+	"187,181,177,177,187,cymride2\n"\
+	"188,178,188,188,176,bongohi\n"\
+	"189,175,189,189,173,bongolo\n"\
+	"190,175,190,190,176,congahi1\n"\
+	"191,175,191,191,173,congahi2\n"\
+	"192,171,191,191,171,congalo\n"\
+	"193,128,128,128,176,timbaleh\n"\
+	"194,128,128,128,173,timbalel\n"\
+	"195,128,128,128,176,agogohi\n"\
+	"196,128,128,128,173,agogolo\n"\
+	"197,128,128,128,197,cabasa\n"\
+	"198,128,198,198,198,maracas\n"\
+	"199,128,128,128,184,whistle1\n"\
+	"200,128,128,128,184,whistle2\n"\
+	"201,128,128,128,184,guiro1\n"\
+	"202,128,128,128,184,guiro2\n"\
+	"203,128,128,128,203,clave\n"\
+	"204,128,204,204,204,woodblk1\n"\
+	"205,128,205,205,204,woodblk2\n"\
+	"206,128,128,128,203,cuica1\n"\
+	"207,128,128,128,203,cuica2\n"\
+	"208,128,128,128,208,triangl1\n"\
+	"209,128,128,128,209,triangl2\n"\
+	"210,128,128,128,210,shaker\n"\
+	"211,128,128,128,184,jingles\n"\
+	"212,128,128,128,184,belltree\n"\
+	"213,128,128,128,128,castinet\n"\
+	"214,128,128,128,128,surdo1\n"\
+	"215,128,128,128,128,surdo2\n"\
+};
