@@ -367,7 +367,11 @@ extern  int         joybspeed;
 extern  int     viewwidth, viewheight;
 
 int mouseSensitivity;
+
 int headBob; // FS: Head bob toggle
+int	useIntGus; // FS: Internal HT_GUS1M.WAD
+int faststart; // FS: Always faststart if you want
+int novert; // FS: No vertical mouse movement
 extern int	drawTime; // FS: Draw time clock
 
 extern int	use_wpnbinds; // FS: Custom weapon keys
@@ -502,21 +506,6 @@ default_t defaults[] =
 #endif
 
 	{ "usegamma", &usegamma, 0 },
-	{ "usePalFlash", &usePalFlash, 1 }, // FS: Palette Flashing
-	{ "headBob", &headBob, 1 }, // FS: Head bob
-	{ "drawTime", &drawTime, 0}, // FS: Draw time clock
-
-	// FS: Use custom weapon binds
-	{ "use_wpnbinds", &use_wpnbinds, 0},
-	{ "wpn_crossbow", &wpn_crossbow, 44, 1 }, // FS: Z
-	{ "wpn_dragon", &wpn_dragon, 45, 1 }, // FS: X
-	{ "wpn_hellstaff", &wpn_hellstaff, 46, 1 }, // FS: C
-	{ "wpn_phoenix", &wpn_phoenix, 16, 1 }, // FS: Q
-	
-	// FS: Use custom artifact binds
-	{ "use_artbinds", &use_artbinds, 0},
-	{ "art_torch", &art_torch, 33, 1 }, // FS: F
-	{ "art_flask", &art_flask, 34, 1 }, // FS: G
 
 	{ "chatmacro0", (int *) &chat_macros[0], (int) HUSTR_CHATMACRO0 },
 	{ "chatmacro1", (int *) &chat_macros[1], (int) HUSTR_CHATMACRO1 },
@@ -530,7 +519,30 @@ default_t defaults[] =
 	{ "chatmacro9", (int *) &chat_macros[9], (int) HUSTR_CHATMACRO9 }
 };
 
+default_t extendeddefaults[] =
+{
+	{ "faststart", &faststart, 0 }, // FS: Always faststart if you want
+	{ "usePalFlash", &usePalFlash, 1 }, // FS: Palette Flashing
+	{ "headBob", &headBob, 1 }, // FS: Head bob
+	{ "drawTime", &drawTime, 0}, // FS: Draw time clock
+	{ "useIntGus", &useIntGus, 0}, // FS: Use internal HT_GUS1M.WAD
+	{ "novert", &novert, 0}, // FS: No vertical mouse movement
+	
+	// FS: Use custom weapon binds
+	{ "use_wpnbinds", &use_wpnbinds, 0},
+	{ "wpn_crossbow", &wpn_crossbow, 44, 1 }, // FS: Z
+	{ "wpn_dragon", &wpn_dragon, 45, 1 }, // FS: X
+	{ "wpn_hellstaff", &wpn_hellstaff, 46, 1 }, // FS: C
+	{ "wpn_phoenix", &wpn_phoenix, 16, 1 }, // FS: Q
+	
+	// FS: Use custom artifact binds
+	{ "use_artbinds", &use_artbinds, 0},
+	{ "art_torch", &art_torch, 33, 1 }, // FS: F
+	{ "art_flask", &art_flask, 34, 1 } // FS: G
+};	
+
 int numdefaults;
+int numextendeddefaults; // FS: Use EXTEND.CFG
 char *defaultfile;
 
 /*
@@ -570,6 +582,34 @@ void M_SaveDefaults (void)
 	fclose (f);
 }
 
+void M_SaveExtendedDefaults (void)
+{
+	int     i,v;
+	FILE    *f;
+
+	f = fopen ("extend.cfg", "w");
+	if (!f)
+		return;         // can't write the file, but don't complain
+
+	for (i=0 ; i<numextendeddefaults ; i++)
+	{
+#ifdef __WATCOMC__
+		if (extendeddefaults[i].scantranslate)
+			extendeddefaults[i].location = &extendeddefaults[i].untranslated;
+#endif
+		if (extendeddefaults[i].defaultvalue > -0xfff
+		  && extendeddefaults[i].defaultvalue < 0xfff)
+		{
+			v = *extendeddefaults[i].location;
+			fprintf (f,"%s\t\t%i\n",extendeddefaults[i].name,v);
+		} else {
+			fprintf (f,"%s\t\t\"%s\"\n",extendeddefaults[i].name,
+			  * (char **) (extendeddefaults[i].location));
+		}
+	}
+
+	fclose (f);
+}
 
 /*
 ==============
@@ -671,6 +711,75 @@ void M_LoadDefaults (void)
 #endif
 }
 
+
+void M_LoadExtendedDefaults (void)
+{
+	int     i, len;
+	FILE    *f;
+	char    def[80];
+	char        strparm[100];
+	char    *newstring;
+	int     parm;
+	boolean     isstring;
+
+//
+// set everything to base values
+//
+	numextendeddefaults = sizeof(extendeddefaults)/sizeof(extendeddefaults[0]);
+	for (i=0 ; i<numextendeddefaults ; i++)
+		*extendeddefaults[i].location = extendeddefaults[i].defaultvalue;
+//
+// read the file in, overriding any set defaults
+//
+	f = fopen ("extend.cfg", "r");
+	if (f)
+	{
+		while (!feof(f))
+		{
+			isstring = false;
+			if (fscanf (f, "%79s %[^\n]\n", def, strparm) == 2)
+			{
+			  if (strparm[0] == '"')
+			  {
+				// get a string default
+				isstring = true;
+				len = strlen(strparm);
+				newstring = (char *) malloc(len);
+				strparm[len-1] = 0;
+				strcpy(newstring, strparm+1);
+			  }
+			  else if (strparm[0] == '0' && strparm[1] == 'x')
+				  sscanf(strparm+2, "%x", &parm);
+			  else
+				  sscanf(strparm, "%i", &parm);
+			  for (i=0 ; i<numextendeddefaults ; i++)
+				  if (!strcmp(def, extendeddefaults[i].name))
+				  {
+					  if (!isstring)
+						*extendeddefaults[i].location = parm;
+					  else
+						*extendeddefaults[i].location = (int) newstring;
+					  break;
+				  }
+			}
+		}
+
+		fclose (f);
+	}
+
+
+#ifdef __WATCOMC__
+	for(i = 0; i < numextendeddefaults; i++)
+	{
+		if(extendeddefaults[i].scantranslate)
+		{
+			parm = *extendeddefaults[i].location;
+			extendeddefaults[i].untranslated = parm;
+			*extendeddefaults[i].location = scantokey[parm];
+		}
+	}
+#endif
+}
 
 /*
 ==============================================================================
